[gd_scene load_steps=12 format=3 uid="uid://bfjyly4gnd54f"]

[ext_resource type="Script" path="res://main_scenes/intro_scene.gd" id="1_pi0pd"]
[ext_resource type="PackedScene" uid="uid://0u7op5yq0yde" path="res://gui/dialogue_interface.tscn" id="2_6t1y3"]
[ext_resource type="Texture2D" uid="uid://o7gf0te6u550" path="res://assets/gui/scroll.png" id="2_n0thd"]
[ext_resource type="Texture2D" uid="uid://cu3apdvh1ff" path="res://assets/portraits/portrait-with-border40.png" id="3_bxbfo"]
[ext_resource type="JSON" path="res://assets/dialogues/introScene_dialogue.json" id="3_kjrvd"]
[ext_resource type="Texture2D" uid="uid://dq6hlkvym48ok" path="res://assets/gui/A_Accept1.png" id="4_dbbpt"]
[ext_resource type="Script" path="res://main_scenes/LineEdit.gd" id="4_q32e3"]
[ext_resource type="Texture2D" uid="uid://b86838q646824" path="res://assets/portraits/portrait-with-border44.png" id="5_iaiel"]
[ext_resource type="Texture2D" uid="uid://da0xk11hj72k6" path="res://assets/gui/A_Restart1.png" id="5_xg0cr"]
[ext_resource type="Texture2D" uid="uid://v6ipurl3cjku" path="res://assets/portraits/portrait-with-border75.png" id="6_oe3ue"]
[ext_resource type="Texture2D" uid="uid://t3lu50ucou3e" path="res://assets/portraits/portrait-with-border82.png" id="7_2oyir"]

[node name="IntroScene" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_pi0pd")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.184314, 0.184314, 0.184314, 1)

[node name="Hero1" type="TextureRect" parent="."]
layout_mode = 0
offset_left = -74.0
offset_top = 150.0
offset_right = 438.0
offset_bottom = 662.0
texture = ExtResource("2_n0thd")

[node name="Sprite2D" type="Sprite2D" parent="Hero1"]
position = Vector2(187, 133)
scale = Vector2(1.5, 1.5)
texture = ExtResource("3_bxbfo")

[node name="Name" type="Label" parent="Hero1"]
layout_mode = 0
offset_left = 163.0
offset_top = 204.0
offset_right = 215.0
offset_bottom = 230.0
text = "Name:"

[node name="LineEdit1" type="LineEdit" parent="Hero1"]
layout_mode = 0
offset_left = 217.0
offset_top = 202.0
offset_right = 390.0
offset_bottom = 233.0
placeholder_text = "Hero1"
script = ExtResource("4_q32e3")

[node name="Likes" type="Label" parent="Hero1"]
layout_mode = 0
offset_left = 265.0
offset_top = 90.0
offset_right = 360.0
offset_bottom = 116.0
text = "Likes: Books"

[node name="Likes2" type="Label" parent="Hero1"]
layout_mode = 0
offset_left = 274.0
offset_top = 106.0
offset_right = 387.0
offset_bottom = 132.0
text = "Books, Puzzles"

[node name="Dislikes" type="Label" parent="Hero1"]
layout_mode = 0
offset_left = 270.0
offset_top = 144.0
offset_right = 338.0
offset_bottom = 170.0
text = "Dislikes: "

[node name="Dislikes2" type="Label" parent="Hero1"]
layout_mode = 0
offset_left = 282.0
offset_top = 160.0
offset_right = 400.0
offset_bottom = 186.0
text = "Glory, Combat"

[node name="RichTextLabel" type="RichTextLabel" parent="Hero1"]
layout_mode = 0
offset_left = 154.0
offset_top = 257.0
offset_right = 383.0
offset_bottom = 410.0
text = "Wizard. The name strikes terror into the hearts of Goblins everywhere! Apparently likes dusy old books, the weirdo!"

[node name="Hero2" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 235.0
offset_top = 6.0
offset_right = 747.0
offset_bottom = 518.0
texture = ExtResource("2_n0thd")

[node name="Sprite2D" type="Sprite2D" parent="Hero2"]
position = Vector2(187, 133)
scale = Vector2(1.5, 1.5)
texture = ExtResource("5_iaiel")

[node name="Name" type="Label" parent="Hero2"]
layout_mode = 0
offset_left = 163.0
offset_top = 204.0
offset_right = 215.0
offset_bottom = 230.0
text = "Name:"

[node name="LineEdit2" type="LineEdit" parent="Hero2"]
layout_mode = 0
offset_left = 217.0
offset_top = 202.0
offset_right = 390.0
offset_bottom = 233.0
placeholder_text = "Hero2"
script = ExtResource("4_q32e3")

[node name="Likes" type="Label" parent="Hero2"]
layout_mode = 0
offset_left = 265.0
offset_top = 90.0
offset_right = 360.0
offset_bottom = 116.0
text = "Likes: Books"

[node name="Likes2" type="Label" parent="Hero2"]
layout_mode = 0
offset_left = 274.0
offset_top = 106.0
offset_right = 387.0
offset_bottom = 132.0
text = "Books, Puzzles"

[node name="Dislikes" type="Label" parent="Hero2"]
layout_mode = 0
offset_left = 270.0
offset_top = 144.0
offset_right = 338.0
offset_bottom = 170.0
text = "Dislikes: "

[node name="Dislikes2" type="Label" parent="Hero2"]
layout_mode = 0
offset_left = 282.0
offset_top = 160.0
offset_right = 400.0
offset_bottom = 186.0
text = "Glory, Combat"

[node name="RichTextLabel" type="RichTextLabel" parent="Hero2"]
layout_mode = 0
offset_left = 154.0
offset_top = 257.0
offset_right = 383.0
offset_bottom = 410.0
text = "Wizard. The name strikes terror into the hearts of Goblins everywhere! Apparently likes dusy old books, the weirdo!"

[node name="Hero3" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 505.0
offset_top = 152.0
offset_right = 1017.0
offset_bottom = 664.0
texture = ExtResource("2_n0thd")

[node name="Sprite2D" type="Sprite2D" parent="Hero3"]
position = Vector2(187, 133)
scale = Vector2(1.5, 1.5)
texture = ExtResource("6_oe3ue")

[node name="Name" type="Label" parent="Hero3"]
layout_mode = 0
offset_left = 163.0
offset_top = 204.0
offset_right = 215.0
offset_bottom = 230.0
text = "Name:"

[node name="LineEdit3" type="LineEdit" parent="Hero3"]
layout_mode = 0
offset_left = 217.0
offset_top = 202.0
offset_right = 390.0
offset_bottom = 233.0
placeholder_text = "Hero3"
script = ExtResource("4_q32e3")

[node name="Likes" type="Label" parent="Hero3"]
layout_mode = 0
offset_left = 265.0
offset_top = 90.0
offset_right = 360.0
offset_bottom = 116.0
text = "Likes: Books"

[node name="Likes2" type="Label" parent="Hero3"]
layout_mode = 0
offset_left = 274.0
offset_top = 106.0
offset_right = 387.0
offset_bottom = 132.0
text = "Books, Puzzles"

[node name="Dislikes" type="Label" parent="Hero3"]
layout_mode = 0
offset_left = 270.0
offset_top = 144.0
offset_right = 338.0
offset_bottom = 170.0
text = "Dislikes: "

[node name="Dislikes2" type="Label" parent="Hero3"]
layout_mode = 0
offset_left = 282.0
offset_top = 160.0
offset_right = 400.0
offset_bottom = 186.0
text = "Glory, Combat"

[node name="RichTextLabel" type="RichTextLabel" parent="Hero3"]
layout_mode = 0
offset_left = 154.0
offset_top = 257.0
offset_right = 383.0
offset_bottom = 410.0
text = "Wizard. The name strikes terror into the hearts of Goblins everywhere! Apparently likes dusy old books, the weirdo!"

[node name="Hero4" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 824.0
offset_top = -2.0
offset_right = 1336.0
offset_bottom = 510.0
texture = ExtResource("2_n0thd")

[node name="Sprite2D" type="Sprite2D" parent="Hero4"]
position = Vector2(187, 133)
scale = Vector2(1.5, 1.5)
texture = ExtResource("7_2oyir")

[node name="Name" type="Label" parent="Hero4"]
layout_mode = 0
offset_left = 163.0
offset_top = 204.0
offset_right = 215.0
offset_bottom = 230.0
text = "Name:"

[node name="LineEdit4" type="LineEdit" parent="Hero4"]
layout_mode = 0
offset_left = 217.0
offset_top = 202.0
offset_right = 390.0
offset_bottom = 233.0
placeholder_text = "Hero4"
script = ExtResource("4_q32e3")

[node name="Likes" type="Label" parent="Hero4"]
layout_mode = 0
offset_left = 265.0
offset_top = 90.0
offset_right = 360.0
offset_bottom = 116.0
text = "Likes: Books"

[node name="Likes2" type="Label" parent="Hero4"]
layout_mode = 0
offset_left = 274.0
offset_top = 106.0
offset_right = 387.0
offset_bottom = 132.0
text = "Books, Puzzles"

[node name="Dislikes" type="Label" parent="Hero4"]
layout_mode = 0
offset_left = 270.0
offset_top = 144.0
offset_right = 338.0
offset_bottom = 170.0
text = "Dislikes: "

[node name="Dislikes2" type="Label" parent="Hero4"]
layout_mode = 0
offset_left = 282.0
offset_top = 160.0
offset_right = 400.0
offset_bottom = 186.0
text = "Glory, Combat"

[node name="RichTextLabel" type="RichTextLabel" parent="Hero4"]
layout_mode = 0
offset_left = 154.0
offset_top = 257.0
offset_right = 383.0
offset_bottom = 410.0
text = "Wizard. The name strikes terror into the hearts of Goblins everywhere! Apparently likes dusy old books, the weirdo!"

[node name="DialogueInterface" parent="." instance=ExtResource("2_6t1y3")]
dialogue_file = ExtResource("3_kjrvd")

[node name="Select" type="Button" parent="."]
layout_mode = 0
offset_left = 1172.0
offset_top = 207.0
offset_right = 1200.0
offset_bottom = 235.0
scale = Vector2(3, 3)
icon = ExtResource("4_dbbpt")
flat = true

[node name="Reroll" type="Button" parent="."]
layout_mode = 0
offset_left = 1170.0
offset_top = 346.0
offset_right = 1198.0
offset_bottom = 374.0
scale = Vector2(3, 3)
icon = ExtResource("5_xg0cr")
flat = true

[connection signal="text_submitted" from="Hero1/LineEdit1" to="." method="_on_line_edit_1_text_submitted"]
[connection signal="text_submitted" from="Hero2/LineEdit2" to="." method="_on_line_edit_2_text_submitted"]
[connection signal="text_submitted" from="Hero3/LineEdit3" to="." method="_on_line_edit_3_text_submitted"]
[connection signal="text_submitted" from="Hero4/LineEdit4" to="." method="_on_line_edit_4_text_submitted"]
[connection signal="dialog_completed" from="DialogueInterface" to="." method="_on_dialogue_interface_dialog_completed"]
[connection signal="pressed" from="Select" to="." method="_on_select_pressed"]
[connection signal="pressed" from="Reroll" to="." method="_on_reroll_pressed"]
